--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -1,4 +1,3 @@
-<resources>
     <string name="ok">OK</string>
     <string name="cancel">Cancelar</string>
     <string name="search">Pesquisar</string>
@@ -110,7 +109,7 @@
     <string name="extension">Extensão</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
-    <string name="use_for_this_folder">Use for this folder only</string>
+    <string name="use_for_this_folder">Apenas para esta pasta</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
