--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -157,7 +157,7 @@
     <string name="donate_underlined"><u>Doações</u></string>
     <string name="follow_us">Siga-nos:</string>
     <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
-    <string name="donate_please">Olá,\n\nparece que você\tem usado esse app por um tempinho.\n\nVocê sabia que\ele não é custeado por nenhuma grande empresa? Desenvolve-lo leva tempo, e quero evitar de usar propagandas, logo sua ajuda seria muito bem vinda.\n\nVocê pode me ajudar comprando o app Simple Thank You, disponível na Play Store, ou me enviando dinheiro diretamente pelo Paypal, ou através de bitcoins.\n\nMais informações em http://simplemobiletools.com/donate.\n\nObrigado!</string>
+    <string name="donate_please">Olá,\n\nparece que vocêtem usado esse app por um tempinho.\n\nVocê sabia queele não é custeado por nenhuma grande empresa? Desenvolve-lo leva tempo, e quero evitar de usar propagandas, logo sua ajuda seria muito bem vinda.\n\nVocê pode me ajudar comprando o app Simple Thank You, disponível na Play Store, ou me enviando dinheiro diretamente pelo Paypal, ou através de bitcoins.\n\nMais informações em http://simplemobiletools.com/donate.\n\nObrigado!</string>
 
     <!-- License -->
     <string name="notice">Este aplicativo usa as seguintes bibliotecas de terceiros para facilitar a minha vida. Obrigado.</string>
