--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -81,7 +81,7 @@
     <string name="file_already_exists">Súbor \"%1$s\" už existuje</string>
     <string name="file_already_exists_overwrite">Súbor \"%1$s\" už existuje. Prepísať?</string>
     <string name="folder_already_exists">Priečinok \"%1$s\" už existuje</string>
-    <string name="merge">Merge</string>
+    <string name="merge">Zlúčiť</string>
     <string name="overwrite">Prepísať</string>
     <string name="skip">Preskočiť</string>
     <string name="append">Pripnúť \'_1\'</string>
