--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -107,8 +107,8 @@
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
-        <item quantity="other">%d items</item>
+        <item quantity="one">%d個項目</item>
+        <item quantity="other">%d個項目</item>
     </plurals>
 
     <!-- Storages -->
@@ -144,7 +144,7 @@
     <string name="foreground_color">前景顏色</string>
     <string name="app_icon_color">應用程式圖標顏色</string>
     <string name="restore_defaults">恢復預設</string>
-    <string name="change_color">Change color</string>
+    <string name="change_color">改變顏色</string>
     <string name="theme">主題</string>
     <string name="changing_color_description">改變顏色將切換成[自訂]主題</string>
     <string name="save">儲存</string>
@@ -203,8 +203,8 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">確定要進行刪除嗎?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="deletion_confirmation">你確定要刪除%s嗎?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">你確定要把%s移到回收桶嗎?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
     <string name="do_not_ask_again">這情況不再詢問</string>
     <string name="yes">是</string>
     <string name="no">否</string>
@@ -350,17 +350,18 @@
     <string name="use_same_snooze">總是使用相同延遲間隔</string>
     <string name="snooze_time">延遲時間</string>
     <string name="vibrate_on_button_press">按下按鈕時震動</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
+    <string name="move_items_to_trash_bin">將項目移入回收桶取代刪除</string>
+    <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
+    <string name="empty_recycle_bin">空白回收桶</string>
+    <string name="recycle_bin_location">回收桶位置</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
     <string name="security">安全性</string>
     <string name="scrolling">滑動</string>
     <string name="file_operations">檔案操作</string>
-    <string name="recycle_bin">Recycle Bin</string>
+    <string name="recycle_bin">回收桶</string>
+
 
     <!-- Import / Export -->
     <string name="importing">正在匯入…</string>
@@ -466,8 +467,8 @@
     <string name="faq_3_text_commons">不幸地，沒有辦法。檔案經確認後就立即刪除了，沒有垃圾筒可用。</string>
     <string name="faq_4_title_commons">我不喜歡小工具的顏色，我能更改嗎?</string>
     <string name="faq_4_text_commons">可啊，當你在主畫面拖動小工具時，會出現小工具設置畫面。你會在左下角看到顏色方塊，點下去再挑個新顏色就好了。你也能用拉條來調整透明度。</string>
-    <string name="faq_5_title_commons">Can I somehow restore deleted files?</string>
-    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, you can enable using a Recycle Bin instead of deleting in the app settings. That will just move the files in it instead of deleting them. You can customize the Recycle Bin location, emptying interval, or empty it manually.</string>
+    <string name="faq_5_title_commons">我有辦法恢復被刪除的檔案嗎?</string>
+    <string name="faq_5_text_commons">如果它們確實被刪除了，那沒辦法。然而，你可以在程式設定中啟用回收桶來取代刪除。那只會移動檔案而不是刪除它們。你可以自訂回收桶位置、清空間隔或手動清空。</string>
 
     <!-- License -->
     <string name="notice">這程式使用了下列的第三方函式庫來讓我工作簡化。感謝。</string>
