--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -108,8 +108,8 @@
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
-        <item quantity="other">%d items</item>
+        <item quantity="one">%d element</item>
+        <item quantity="other">%d elementer</item>
     </plurals>
 
     <!-- Storages -->
@@ -204,9 +204,9 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Er du sikker på at du vil fortsætte med at slette?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
-    <string name="do_not_ask_again">Do not ask again in this session</string>
+    <string name="deletion_confirmation">Er du sikker på at du vil slette %s?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">Er du sikker på at du vil flytte %s til papirkurven?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="do_not_ask_again">Spørg ikke igen i denne session</string>
     <string name="yes">Ja</string>
     <string name="no">Nej</string>
 
@@ -326,7 +326,6 @@
     <string name="system_sounds">Systemlyde</string>
     <string name="your_sounds">Dine lyde</string>
     <string name="add_new_sound">Tilføj en ny lyd</string>
-    <string name="no_sound">No sound</string>
 
     <!-- Settings -->
     <string name="settings">Indstillinger</string>
@@ -352,17 +351,17 @@
     <string name="use_same_snooze">Brug altid samme udsættelsestid</string>
     <string name="snooze_time">Udsættelsestid</string>
     <string name="vibrate_on_button_press">Vibrer ved tryk på knapper</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
+    <string name="move_items_to_trash_bin">Flyt elementer til papirkurven i stedet for at slette dem</string>
+    <string name="recycle_bin_cleaning_interval">Interval for tømning af papirkurven</string>
+    <string name="empty_recycle_bin">Tøm papirkurven</string>
+    <string name="recycle_bin_location">Papirkurvens placering</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
     <string name="security">Sikkerhed</string>
     <string name="scrolling">Scrolling</string>
     <string name="file_operations">Filoperationer</string>
-    <string name="recycle_bin">Recycle Bin</string>
+    <string name="recycle_bin">Papirkurv</string>
 
     <!-- Import / Export -->
     <string name="importing">Importerer…</string>
@@ -467,9 +466,8 @@
     <string name="faq_3_text_commons">Det kan du desværre ikke. Filer er væk så snart sletningen er bekræftet, og der er ingen papirkurv.</string>
     <string name="faq_4_title_commons">Jeg bryder mig ikke om farverne på widget\'en, kan jeg ændre dem?</string>
     <string name="faq_4_text_commons">Jep. Når du føjer en widget til din skærm kommer muligheden for at konfigurere den frem. I nederste venstre hjørne finder du farvede kvadrater, klik på dem og vælg en ny farve. Du kan justere alfa med skyderen.</string>
-    <string name="faq_5_title_commons">Can I somehow restore deleted files?</string>
-    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, you can enable using a Recycle Bin instead of deleting in the app settings. That will just move the files in it instead of deleting them. You can customize the Recycle Bin location, emptying interval, or empty it manually.</string>
-
+    <string name="faq_5_title_commons">Kan jeg gendanne slettede filer?</string>
+    <string name="faq_5_text_commons">Nej, ikke hvis de virkelig er slettet. Men du kan vælge at bruge en papirkurv i stedet for at slette noget direkte. Papirkurven aktiveres i indstillingerne. Her kan du også vælge placering af den, bestemme hvor tit den skal tømmes, eller du kan vælge at tømme den manuelt.</string>
     <!-- License -->
     <string name="notice">Denne app bruger følgende 3.-parts biblioteker der gør at mit liv bliver lidt enklere. Tak.</string>
     <string name="third_party_licences">3.-parts licencer</string>
