--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -369,18 +369,18 @@
     <string name="use_same_snooze">Visada naudoti tą patį snaudimo laiką</string>
     <string name="snooze_time">Snaudimo laikas</string>
     <string name="vibrate_on_button_press">Vibruoti kai spaudžiami mygtukai</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
-    <string name="force_portrait_mode">Force portrait mode</string>
+    <string name="move_items_to_trash_bin">Perkelti elementus į šiukšlinę vietoj ištrynimo</string>
+    <string name="recycle_bin_cleaning_interval">Šiukšlinės išvalymo intervalas</string>
+    <string name="empty_recycle_bin">Ištuštinti šiukšlinę</string>
+    <string name="recycle_bin_location">Šiukšlinės vieta</string>
+    <string name="force_portrait_mode">Priversti rodyti portreto rėžimu</string>
 
     <!-- Setting sections -->
     <string name="visibility">Matomumas</string>
     <string name="security">Sauga</string>
     <string name="scrolling">Slinkimas</string>
     <string name="file_operations">Bylų operacijos</string>
-    <string name="recycle_bin">Recycle Bin</string>
+    <string name="recycle_bin">Šiukšlinė</string>
 
     <!-- Import / Export -->
     <string name="importing">Importuojama…</string>
