--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -358,7 +358,7 @@
     <string name="recycle_bin_cleaning_interval">Interval de neteja de paperera de reciclatge</string>
     <string name="empty_recycle_bin">Buida la paperera de reciclatge</string>
     <string name="recycle_bin_location">Ubicació de la paperera de reciclatge</string>
-    <string name="force_portrait_mode">Force portrait mode</string>
+    <string name="force_portrait_mode">Força el mode de retrat</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitat</string>
