--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -56,7 +56,7 @@
     <string name="source">Origem</string>
     <string name="destination">Destino</string>
     <string name="select_destination">Selecione o destino</string>
-    <string name="click_select_destination">Clique aqui para escolher o destino</string>
+    <string name="click_select_destination">Toque aqui para escolher o destino</string>
     <string name="invalid_destination">Não foi possível escrever no destino selecionado</string>
     <string name="please_select_destination">Por favor selecione um destino</string>
     <string name="source_and_destination_same">A origem e o destino não podem ser iguais</string>
@@ -86,7 +86,7 @@
     <!-- File operation conflicts -->
     <string name="file_already_exists">Já existe um ficheiro com o nome \"%s\"</string>
     <string name="file_already_exists_overwrite">Já existe um ficheiro com o nome \"%s\". Substituir?</string>
-    <string name="folder_already_exists">Folder \"%s\" already exists</string>
+    <string name="folder_already_exists">Já existe uma pasta com o nome \"%s\"</string>
     <string name="merge">Unir</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
@@ -204,9 +204,9 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
-    <string name="do_not_ask_again">Não perguntar de novo para esta sessão</string>
+    <string name="deletion_confirmation">Tem a certeza de que deseja apagar %s?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">Tem a certeza de que deseja mover %s para a reciclagem?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="do_not_ask_again">Não perguntar mais para esta sessão</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
 
@@ -326,7 +326,7 @@
     <string name="system_sounds">Sons do sistema</string>
     <string name="your_sounds">Meus sons</string>
     <string name="add_new_sound">Adicionar um novo som</string>
-    <string name="no_sound">No sound</string>
+    <string name="no_sound">Sem som</string>
 
     <!-- Settings -->
     <string name="settings">Definições</string>
@@ -350,20 +350,20 @@
     <string name="sunday_first">Iniciar semana ao domingo</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Usar sempre o mesmo intervalo para snooze</string>
-    <string name="snooze_time">TIntervalo para snooze</string>
+    <string name="snooze_time">Intervalo para snooze</string>
     <string name="vibrate_on_button_press">Vibrar ao tocar nos botões</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
-    <string name="force_portrait_mode">Force portrait mode</string>
+    <string name="move_items_to_trash_bin">Mover itens para a reciclagem em vez de os apagar</string>
+    <string name="recycle_bin_cleaning_interval">Intervalo de tempo para limpar a reciclagem</string>
+    <string name="empty_recycle_bin">Limpar reciclagem</string>
+    <string name="recycle_bin_location">Localização da reciclagem</string>
+    <string name="force_portrait_mode">Impor modo verticar</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidade</string>
     <string name="security">Segurança</string>
     <string name="scrolling">Deslocação</string>
     <string name="file_operations">Operações de ficheiros</string>
-    <string name="recycle_bin">Recycle Bin</string>
+    <string name="recycle_bin">Reciclagem</string>
 
     <!-- Import / Export -->
     <string name="importing">A importar…</string>
