--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -108,8 +108,8 @@
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
-        <item quantity="other">%d items</item>
+        <item quantity="one">%d élément</item>
+        <item quantity="other">%d éléments</item>
     </plurals>
 
     <!-- Storages -->
@@ -145,7 +145,7 @@
     <string name="foreground_color">Couleur de fond</string>
     <string name="app_icon_color">Couleur de fond de l\'îcone de l\'application</string>
     <string name="restore_defaults">Restaurer les valeurs par défaut</string>
-    <string name="change_color">Change color</string>
+    <string name="change_color">Changer couleur</string>
     <string name="theme">Thème</string>
     <string name="changing_color_description">Changer une couleur le basculera en thème personnalisé</string>
     <string name="save">Sauvegarder</string>
@@ -204,8 +204,8 @@
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Êtes-vous sûr•e de vouloir effectuer la suppression ?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="deletion_confirmation">Êtes-vous sûr•e de vouloir supprimer %s ?</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">Êtes-vous sûr•e de vouloir déplacer %s vers la corbeille ?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
     <string name="do_not_ask_again">Ne pas redemander pour cette session</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
@@ -326,7 +326,7 @@
     <string name="system_sounds">Sonneries du système</string>
     <string name="your_sounds">Vos sonneries</string>
     <string name="add_new_sound">Ajouter une nouvelle sonnerie</string>
-    <string name="no_sound">No sound</string>
+    <string name="no_sound">Pas de son</string>
 
     <!-- Settings -->
     <string name="settings">Paramètres</string>
@@ -352,18 +352,18 @@
     <string name="use_same_snooze">Toujours utiliser le même intervalle de répétition</string>
     <string name="snooze_time">Temps de répétition</string>
     <string name="vibrate_on_button_press">Vibrer lors de l\'appui sur un bouton</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
-    <string name="force_portrait_mode">Force portrait mode</string>
+    <string name="move_items_to_trash_bin">Déplacer les éléments vers la corbeille au lieu de les supprimer</string>
+    <string name="recycle_bin_cleaning_interval">Interval de vidage de la corbeille</string>
+    <string name="empty_recycle_bin">Vider la corbeille</string>
+    <string name="recycle_bin_location">Emplacement de la corbeille</string>
+    <string name="force_portrait_mode">Forcer le mode portrait</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilité</string>
     <string name="security">Sécurité</string>
     <string name="scrolling">Défilement</string>
     <string name="file_operations">Opérations sur les fichiers</string>
-    <string name="recycle_bin">Recycle Bin</string>
+    <string name="recycle_bin">Corbeille</string>
 
     <!-- Import / Export -->
     <string name="importing">Importer…</string>
@@ -467,11 +467,11 @@
     <string name="faq_3_text_commons">C\'est malheureusement impossible, car les fichiers sont supprimés instantanément après le dialogue de confirmation et il n\'y a pas de corbeille.</string>
     <string name="faq_4_title_commons">Je n\'aime pas les couleurs du widget. Puis-je la changer ?</string>
     <string name="faq_4_text_commons">Oui, quand vous glissez le widget sur l\'écran d\'accueil un dialogue de configuration apparaît. Vous verrez des carrés en bas à gauche, en appuyant dessus vous pouvez choisir une nouvelle couleur. Vous pouvez aussi utiliser le curseur pour régler la transparence.</string>
-    <string name="faq_5_title_commons">Can I somehow restore deleted files?</string>
-    <string name="faq_5_text_commons">If they were really deleted, you cannot. However, you can enable using a Recycle Bin instead of deleting in the app settings. That will just move the files in it instead of deleting them. You can customize the Recycle Bin location, emptying interval, or empty it manually.</string>
+    <string name="faq_5_title_commons">Puis-je d\'une manière ou d\'une autre restaurer les fichiers supprimés ?</string>
+    <string name="faq_5_text_commons">Si ils ont déjà été supprimés, vous ne pouvez pas. Toutefois, vous pouvez activer l\'utilisation de la corbeille à la place de la suppression dans les paramètres de l\'app. Cela devrait seulement y déplacer les fichiers au lieu de les supprimer. Vous pouvez personnaliser l\'emplacement de la corbeille, l\'interval de vidage, ou la vider manuellement.</string>
 
     <!-- License -->
-    <string name="notice">Cette application utilise les librairies tierces suivantes pour me simplifier la vie. Merci.</string>
+    <string name="notice">Cette application utilise les bibliothèques tierces suivantes pour me simplifier la vie. Merci.</string>
     <string name="third_party_licences">Licences tierces</string>
     <string name="kotlin_title">Kotlin (langage de programmation)</string>
     <string name="subsampling_title">Subsampling Scale Image View (imageviews zoomables)</string>
