--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -15,7 +15,7 @@
     <string name="never">Nooit</string>
     <string name="details">Details</string>
     <string name="notes">Notities</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="deleting_folder">Map \'%s\' verwijderen</string>
 
     <!-- Search -->
     <string name="search">Zoeken</string>
